--- a/src/Component.css
+++ b/src/Component.css
@@ -97,6 +97,12 @@ body {
 .toDoList ul li button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
+}
+
+.done {
+  text-decoration: line-through !important;
+  color: #78CFB0 !important;
 }
 
 @media only screen and (max-width: 1280px) {
